create a user in the database
