# controllers/users.js
@@ -3,8 +3,19 @@ var User = require('./../models/user.js');
 var config = require('../config.js');
 
 module.exports.registerUser = function registerUser (req, res, next) {
+  var username = req.swagger.params.user.value.username;
+  var password = req.swagger.params.user.value.password;
   logger.info('registerUser');
-  res.status(200).send('ok');
+  User.createUser({
+    username: username,
+    password: password
+  }, function(err, user){
+    if (!err && user){
+      res.status(200).send(user);
+    } else {
+      res.status(500).send(err);
+    }
+  });
 };
 
 module.exports.profile = function profile (req, res, next) {
